--- a/Analysis_MHIT.ipynb
+++ b/Analysis_MHIT.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3061,6 +3061,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Here is a histogram of the age distribution across both those with a medical professional diagonsis of a mental health disorder and those without one"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -3082,6 +3089,13 @@
     "# add x and y labels to both plots\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Frequency');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The following visualization is to show the frequency of those with or without a mental health diagnosis by a professional and whether or not they worked at a tech company. Just based on this visual it s like there is a pretty even split, but further statistical analysis is needed."
    ]
   },
   {
@@ -3116,6 +3130,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This distribution is just to show the proportion of tech companies to non-tech companies in the countries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -3141,6 +3162,13 @@
     "tech_company_proportions.plot(kind='bar')\n",
     "plt.title('Proportion of Tech Companies by Country')\n",
     "plt.ylabel('Percentage');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- While not directly related to the tech aspect, this image gives valuable information into whether or not a family history of mental illness plays a role."
    ]
   },
   {
@@ -3181,6 +3209,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This next visual is a little interesting because it is looking at if mental health disorders are more prevalent in larger or smaller companies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -3213,6 +3248,13 @@
    "source": [
     "### We can see this did not show us much about if company size influences mental health diagnosis.\n",
     "- cannot figure out how to get the bars to order correctly will keep working on it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Here is a word cloud consisting of the most popular words from the diagnosed conditions column."
    ]
   },
   {
@@ -3261,6 +3303,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This chart is concerning whether or not a tech role at the company affects the proportion of mental illness."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
    "outputs": [
@@ -3288,6 +3344,104 @@
     "plt.ylabel('Percentage')\n",
     "plt.xlabel('Tech Role')\n",
     "plt.legend(title='Medically Diagnosed Condition', loc='upper left');\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checking statistically how mental health diagnosis is affected by different factors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-squared statistic: 6.80600217522222, P-value: 0.009085194696035621, Degrees of freedom: 1\n",
+      "There is a significant difference in mental health diagnosis between those who work in tech companies and those who do not.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run a chi-squared test to see if there is a significant difference in mental health diagnosis between those who work in tech companies and those who do not\n",
+    "# Create a contingency table\n",
+    "contingency_table = pd.crosstab(os['Tech_company'], os['Med_Prof_Diagnose'])\n",
+    "# Perform the chi-squared test\n",
+    "chi2_stat, p_value, dof, expected = stats.chi2_contingency(contingency_table)\n",
+    "# Print the results\n",
+    "print(f'Chi-squared statistic: {chi2_stat}, P-value: {p_value}, Degrees of freedom: {dof}')\n",
+    "# Interpret the results\n",
+    "if p_value < 0.05:\n",
+    "    print('There is a significant difference in mental health diagnosis between those who work in tech companies and those who do not.')\n",
+    "else:\n",
+    "    print('There is no significant difference in mental health diagnosis between those who work in tech companies and those who do not.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-squared statistic: 264.2365248158145, P-value: 4.83612041400545e-55, Degrees of freedom: 5\n",
+      "There is a significant difference in mental health diagnosis between different company sizes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run a test to see if there is a significance in mental health diagnosis and different company sizes\n",
+    "# Create a contingency table\n",
+    "contingency_table_size = pd.crosstab(os['Size_company'], os['Med_Prof_Diagnose'])\n",
+    "# Perform the chi-squared test\n",
+    "chi2_stat_size, p_value_size, dof_size, expected_size = stats.chi2_contingency(contingency_table_size)\n",
+    "# Print the results\n",
+    "print(f'Chi-squared statistic: {chi2_stat_size}, P-value: {p_value_size}, Degrees of freedom: {dof_size}')\n",
+    "# Interpret the results\n",
+    "if p_value_size < 0.05:\n",
+    "    print('There is a significant difference in mental health diagnosis between different company sizes.')\n",
+    "else:\n",
+    "    print('There is no significant difference in mental health diagnosis between different company sizes.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 countries with the highest percentage of tech companies:\n",
+      "                    Country  Percentage\n",
+      "0  United States of America   59.385904\n",
+      "1            United Kingdom   12.770412\n",
+      "2                    Canada    5.163992\n",
+      "3                   Germany    4.047453\n",
+      "4               Netherlands    3.279833\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find top 5 countries with the highest percentage of tech companies and mental health diagnosis\n",
+    "tech_company_counts = os['Country_work'].value_counts(normalize=True) * 100\n",
+    "tech_company_counts = tech_company_counts[tech_company_counts > 0]\n",
+    "tech_company_counts = tech_company_counts.reset_index()\n",
+    "tech_company_counts.columns = ['Country', 'Percentage']\n",
+    "# Find the top 5 countries with the highest percentage of tech companies\n",
+    "top_5_tech_countries = tech_company_counts.nlargest(5, 'Percentage')\n",
+    "# Print these findings\n",
+    "print('Top 5 countries with the highest percentage of tech companies:')\n",
+    "print(top_5_tech_countries)\n",
+    "\n"
    ]
   }
  ],
