--- a/Analysis_MHIT.ipynb
+++ b/Analysis_MHIT.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analysis of Mental Health in Tech"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Emma Blumenkrantz\n",
+    "### April 15, 2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Working introduction\n",
     "Mental health has emerged as a critical yet often overlooked issue within the tech industry. Long hours, high cognitive demands, rapid innovation cycles, and the challenges of remote work contribute to a workplace culture that can significantly strain employee well-being. Industry reports, including those from The CEO Magazine and Talkspace for Business, highlight burnout and mental health concerns as persistent and systemic problems—ones that not only affect individual workers but also impact overall organizational performance.\n",
     "\n",
@@ -31,6 +46,15 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config InlineBackend.figure_format = 'retina'"
    ]
   },
   {
@@ -2864,6 +2888,11 @@
     "else:\n",
     "    print('There is no significant difference in mental health diagnosis between those who work remotely and those who do not.')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
