--- a/Analysis_MHIT.ipynb
+++ b/Analysis_MHIT.ipynb
@@ -1436,7 +1436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Here is a word cloud consisting of the most popular words from the diagnosed conditions column."
+    "Here is a word cloud consisting of the most popular words from the diagnosed conditions column."
    ]
   },
   {
